# deferred-map

./: Cargo.toml  README.md  README_CN.md
benches/: hashmap_comparison.rs  slotmap_comparison.rs
examples/: basic.rs  secondary.rs
src/: error.rs  handle.rs  lib.rs  map.rs  secondary.rs  slot.rs  utils.rs
src/tests/: debug_safety.rs  edge_cases.rs  handle.rs  insertion.rs  new_features.rs  removal.rs  secondary_test.rs  stress.rs
