[package]
name = "deferred-map"
version = "0.3.1"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance generational arena using handle-based deferred insertion with O(1) operations"
readme = "README.md"
repository = "https://github.com/ShaoG-R/deferred-map"
homepage = "https://github.com/ShaoG-R/deferred-map"
documentation = "https://docs.rs/deferred-map"
keywords = ["slotmap", "arena", "generational", "handle", "data-structure"]
categories = ["data-structures", "memory-management"]
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "*.md",
    "!README.md",
    "!README_CN.md",
]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
slotmap = "1.0.7"
criterion = { version = "0.7.0" }
rustc-hash = "2.1.1"
serde_json = "1.0"

[[bench]]
name = "slotmap_comparison"
harness = false

[[bench]]
name = "hashmap_comparison"
harness = false